<resources>
    <string name="app_name">Calculator</string>

    <string name="value">0</string>
    <string name="action_settings">Settings</string>
    <string name="clear_screen">C</string>
    <string name="memory_clear">MC</string>
    <string name="memory_retrieve">MR</string>
    <string name="memory_add">M+</string>
    <string name="back">Back</string>
    <string name="negation">N</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="minus">-</string>
    <string name="addition">+</string>
    <string name="equals">=</string>
    <string name="nine">9</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="dark_grey">#1F1F1F</color>
    <color name="light_grey">#333333</color>
    <color name="orange">#F96A00</color>

</resources>
