<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >


    <TextView
        android:text="@string/value"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="right"
        android:textColor="@color/white"
        android:id="@+id/displayedValue_textView"
        android:textSize="60sp"
        android:lines="1"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:text="@string/clear_screen"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/light_grey"
            android:textColor="@color/white"
            android:id="@+id/button_C"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_C"/>

        <Button
            android:text="@string/memory_clear"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:background="@color/light_grey"
            android:textColor="@color/white"
            android:id="@+id/button_MC"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_MC"/>

        <Button
            android:text="@string/memory_retrieve"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/light_grey"
            android:textColor="@color/white"
            android:id="@+id/button_MR"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_MR"/>

        <Button
            android:text="@string/memory_add"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/light_grey"
            android:textColor="@color/white"
            android:id="@+id/button_MPlus"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_MPlus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:text="@string/back"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2.0625"
            android:background="@color/light_grey"
            android:textColor="@color/white"
            android:id="@+id/button_Back"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_back"/>

        <Button
            android:text="@string/negation"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.97"
            android:background="@color/light_grey"
            android:textColor="@color/white"
            android:id="@+id/button_N"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_N"/>

        <Button
            android:text="@string/division"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.97"
            android:background="@color/light_grey"
            android:textColor="@color/white"
            android:id="@+id/button_div"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_div"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:text="@string/seven"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:textColor="@color/white"
            android:id="@+id/button_7"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_7"/>

        <Button
            android:text="@string/eight"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:textColor="@color/white"
            android:id="@+id/button_8"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_8"/>

        <Button
            android:text="@string/nine"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:textColor="@color/white"
            android:id="@+id/button_9"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_9"/>

        <Button
            android:text="@string/multiplication"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/light_grey"
            android:textColor="@color/white"
            android:id="@+id/button_mul"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_mul"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">


        <Button
            android:text="@string/four"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:textColor="@color/white"
            android:id="@+id/button_4"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_4"/>

        <Button
            android:text="@string/five"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:textColor="@color/white"
            android:id="@+id/button_5"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_5"/>

        <Button
            android:text="@string/six"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:textColor="@color/white"
            android:id="@+id/button_6"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_6"/>

        <Button
            android:text="@string/minus"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/light_grey"
            android:textColor="@color/white"
            android:id="@+id/button_minus"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_minus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">


        <Button
            android:text="@string/one"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:textColor="@color/white"
            android:id="@+id/button_1"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_1"/>

        <Button
            android:text="@string/two"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:textColor="@color/white"
            android:id="@+id/button_2"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_2"/>

        <Button
            android:text="@string/three"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/dark_grey"
            android:textColor="@color/white"
            android:id="@+id/button_3"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_3"/>

        <Button
            android:text="@string/addition"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/light_grey"
            android:textColor="@color/white"
            android:id="@+id/button_add"
            android:layout_marginBottom="@dimen/margin"
            android:onClick="click_button_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="4"
        android:gravity="center">


        <Button
            android:text="@string/zero"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3.0625"
            android:background="@color/dark_grey"
            android:textColor="@color/white"
            android:id="@+id/button_0"
            android:layout_marginRight="@dimen/margin"
            android:onClick="click_button_0"/>

        <Button
            android:text="@string/equals"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.9375"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:id="@+id/button_equals"
            android:onClick="click_button_equals"/>

    </LinearLayout>

</LinearLayout>
